k8s/Polybot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: polybot-certs
          secret:
            secretName: polybot-tls
      containers:
        - name: polybot
          image: guymeltzer/polybot:1.0.111
          ports:
            - containerPort: 31804  # App listens on 30219
          volumeMounts:
            - name: polybot-certs
              mountPath: "/app/certs"
              readOnly: true
