k8s/Polybot/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"polybot-app"},"name":"polybot-service","namespace":"default"},"spec":{"clusterIP":"10.97.15.96","clusterIPs":["10.97.15.96"],"externalTrafficPolicy":"Cluster","internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"name":"https-port","nodePort":30619,"port":30619,"protocol":"TCP","targetPort":30619}],"selector":{"app":"polybot"},"sessionAffinity [...]
  labels:
    app.kubernetes.io/instance: polybot-app
  name: polybot-service
  namespace: default
spec:
  clusterIP: 10.97.15.96
  clusterIPs:
    - 10.97.15.96
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: https-port
      nodePort: 30619
      port: 30619
      protocol: TCP
      targetPort: 30619
  selector:
    app: polybot
  sessionAffinity: None
  type: NodePort
