k8s/Polybot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/subnets: subnet-0f06d6a02a65daa1b,subnet-04ad85c182f7faba6
    alb.ingress.kubernetes.io/target-type: instance
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/subnets":"subnet-0f06d6a02a65daa1b,subnet-04ad85c182f7faba6","alb.ingress.kubernetes.io/target-type":"instance","kubernetes.io/ingress.class":"alb"},"finalizers":["ingress.k8s.aws/resources"],"labels":{"app.kubernetes.io/instance":"polybot-app"},"name":"polybot-ingress","namespace":"default"},"spec":{"rules":[{"host":"omer-polybot-lb.devops-int-college.com","http":{"paths":[{"backend [...]
    kubernetes.io/ingress.class: alb
  finalizers:
    - ingress.k8s.aws/resources
  labels:
    app.kubernetes.io/instance: polybot-app
  name: polybot-ingress
  namespace: default
spec:
  rules:
    - host: omer-polybot-lb.devops-int-college.com
      http:
        paths:
          - backend:
              service:
                name: polybot-service
                port:
                  number: 30619
            path: /
            pathType: Prefix
          - backend:
              service:
                name: polybot-service
                port:
                  number: 30619
            path: /health
            pathType: Prefix
  tls:
    - hosts:
        - omer-polybot-lb.devops-int-college.com
      secretName: polybot-tls
